Ensure the space between PDF pages is visible in all themes
It was not visible when using a theme in which the default background color of webview panels is white (when PDF pages are white).

--- a/src/webview/template/static/css/pdf.css
+++ b/src/webview/template/static/css/pdf.css
@@ -4,6 +4,7 @@
 
 .pdf-page-container {
     z-index: 0;
+    background-color: #666;
 }
 
 .pdf-annotation-mask-container {
